--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -3,7 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Height="300" Width="400" WindowStartupLocation="CenterScreen"
         Background="#1E1E1E" Foreground="#CCCCCC"
-        WindowStyle="None" AllowsTransparency="True">
+        WindowStyle="None" AllowsTransparency="True"
+        MouseMove="Window_MouseMove">
     <Window.Resources>
         <Style x:Key="WindowButtonStyle" TargetType="Button">
             <Setter Property="Background" Value="Transparent"/>
